[tool.poetry]
name = "Prediction_initial_version"
version = "0.1.0"
description = ""
authors = ["Richard <richardfelipelives@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.10.0"
pandas = "^2.2.3"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
